--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,9 @@ Style/Encoding:
 Layout/LineLength:
   Max: 120
 
+Metrics/MethodLength:
+  Max: 15
+
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: consistent_comma
 
