--- a/.github/workflows/2022.yml
+++ b/.github/workflows/2022.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.12.0-alpha.2'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt
       - run: python -m unittest discover -v
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.10.8'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt
       - run: python -m flake8
