--- a/.github/workflows/2022.yml
+++ b/.github/workflows/2022.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 50
     defaults:
       run:
         working-directory: ./2022
@@ -23,6 +24,7 @@ jobs:
   
   lint:
     runs-on: ubuntu-latest
+    timeout-minutes: 50
     defaults:
       run:
         working-directory: ./2022
