--- a/2022/requirements.txt
+++ b/2022/requirements.txt
@@ -1,6 +1,7 @@
-advent_of_code_data==1.3.1
+advent_of_code_data==1.3.2
 flake8==6.0.0
-black==22.10.0
+black==22.12.0
 pandas==1.5.2
 numpy==1.23.5
 anytree==2.8.0
+matplotlib==3.6.2
