quick solution in ruby
Signed-off-by: Pedro Tanaka <pedro.stanaka@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -294,3 +295,6 @@ Cargo.lock
 *.pdb
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,ruby,rust
+
+.env
+**/input.txt
