Resolving day 2 - day one was resolved in repl
Squashed commit of the following:

commit 51cab652b364c8f0e75fbc751dad3b6a1833c5a8
Author: Pedro Tanaka <pedro.stanaka@gmail.com>
Date:   Mon Dec 2 09:01:25 2024 +0100

    adding skeleton code

    Signed-off-by: Pedro Tanaka <pedro.stanaka@gmail.com>

commit e813dc3542807c9566246899a93f1a2c445d8a55
Author: Pedro Tanaka <pedro.stanaka@gmail.com>
Date:   Mon Dec 2 08:40:45 2024 +0100

    quick solution in ruby

    Signed-off-by: Pedro Tanaka <pedro.stanaka@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -72,7 +73,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -294,3 +294,6 @@ Cargo.lock
 *.pdb
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,ruby,rust
+
+.env
+**/input.txt
